# followup-hq

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  DEVELOPER_NOTES.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts  zip.bat
e2e/: alignment-screenshots.spec.ts
e2e/fixtures/: workflowSeed.ts
e2e/helpers/: testHarness.ts
e2e/smoke/: app-boot-shell-readiness.spec.ts  followups-progresses-after-close.spec.ts  overview-routes-to-followups.spec.ts  tasks-complete-keeps-lane-momentum.spec.ts
e2e/workflows/: full-edit-save-and-reload.spec.ts  quick-add-high-confidence-import.spec.ts  record-drawer-escalates-to-editor.spec.ts  support-workspaces-route-to-lanes.spec.ts
public/: manifest.webmanifest  sw.js
scripts/: esm-extension-loader.mjs  generate-build-meta.mjs  ui-contract-check.mjs
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: Badge.tsx  CloseoutReadinessCard.tsx  ConflictQueueCenter.tsx  ControlBar.tsx  CreateWorkModal.tsx  DailyReviewBoard.tsx  DashboardBoard.tsx  DirectoryWorkspace.tsx  DuplicateReviewPanel.tsx  EntityCombobox.tsx  ExportWorkspace.tsx  FollowUpDraftModal.tsx  ForwardingIntakeWorkspace.tsx  Header.tsx  ImportWizardModal.tsx  IngestionModal.tsx  IngestionWorkbench.tsx  IntakePanel.tsx  IntakeWorkspacePanel.tsx  ItemDetailPanel.tsx  ItemFormModal.tsx  (+26 more)
test-results/: .last-run.json
(+351 files in other folders)
